added: timetable ui